; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/korg1212/extr_korg1212.c_snd_korg1212_SetClockSource.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/korg1212/extr_korg1212.c_snd_korg1212_SetClockSource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_korg1212 = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_korg1212*, i32)* @snd_korg1212_SetClockSource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_korg1212_SetClockSource(%struct.snd_korg1212* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_korg1212*, align 8
  %5 = alloca i32, align 4
  store %struct.snd_korg1212* %0, %struct.snd_korg1212** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %5, align 4
  %10 = icmp sgt i32 %9, 2
  br i1 %10, label %11, label %14

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %23

14:                                               ; preds = %8
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.snd_korg1212*, %struct.snd_korg1212** %4, align 8
  %17 = getelementptr inbounds %struct.snd_korg1212, %struct.snd_korg1212* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load %struct.snd_korg1212*, %struct.snd_korg1212** %4, align 8
  %19 = load %struct.snd_korg1212*, %struct.snd_korg1212** %4, align 8
  %20 = getelementptr inbounds %struct.snd_korg1212, %struct.snd_korg1212* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @snd_korg1212_SetRate(%struct.snd_korg1212* %18, i32 %21)
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %14, %11
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @snd_korg1212_SetRate(%struct.snd_korg1212*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
